add js and images

--- a/flavors.html
+++ b/flavors.html
@@ -29,15 +29,15 @@
     </header>
       <img src="img/banner.png" id="banner" alt="">
       <div id="flavorwrapper">
-        <img src="img/vanilla.png" id="vanilla" class="flavor" alt="Close-up of vanilla ice cream.">
-        <img src="img/chocolate.png" id="chocolate" class="flavor" alt="Close-up of chocolate ice cream.">
-        <img src="img/pumpkin.png" id="pumpkin" class="flavor" alt="Close-up of pumpkin ice cream.">
-        <img src="img/coffee.png" id="coffee" class="flavor" alt="Close-up of coffee ice cream.">
-        <img src="img/mintchoccychip.png" id="mint" class="flavor" alt="Close-up of mint chocolate chip ice cream.">
-        <img src="img/blackraspberry.png" id="raspberry" class="flavor" alt="Close-up of black raspberry ice cream.">
-        <img src="img/cookiesandcream.png" id="cncream" class="flavor" alt="Close-up of cookies and cream ice cream.">
-        <img src="img/blueberry.png" id="blueberry" class="flavor" alt="Close-up of blueberry ice cream.">
-        <img src="img/pb.png" id="pb" class="flavor" alt="Close-up of peanut butter ice cream.">
+        <button type="button" class="btn btn-outline-light" id="vanilla" onclick="displayVanillaInfo()"><img src="img/vanilla.png" class="flavor" alt="Close-up of vanilla ice cream."></button>
+        <button type="button" class="btn btn-outline-light" id="chocolate" onclick="displayChocolateInfo()"><img src="img/chocolate.png"  class="flavor" alt="Close-up of chocolate ice cream."></button>
+        <button type="button" class="btn btn-outline-light" id="pumpkin" onclick="displayPumpkinInfo()"><img src="img/pumpkin.png"  class="flavor" alt="Close-up of pumpkin ice cream."></button>
+        <button type="button" class="btn btn-outline-light" id="coffee" onclick="displayCoffeeInfo()"><img src="img/coffee.png"  class="flavor" alt="Close-up of coffee ice cream."></button>
+        <button type="button" class="btn btn-outline-light" id="mint" onclick="displayMintInfo()"><img src="img/mintchoccychip.png"  class="flavor" alt="Close-up of mint chocolate chip ice cream."></button>
+        <button type="button" class="btn btn-outline-light" id="raspberry" onclick="displayRaspberryInfo()"><img src="img/blackraspberry.png"  class="flavor" alt="Close-up of black raspberry ice cream."></button>
+        <button type="button" class="btn btn-outline-light" id="cncream" onclick="displayCncreamInfo()"><img src="img/cookiesandcream.png" class="flavor" alt="Close-up of cookies and cream ice cream."></button>
+        <button type="button" class="btn btn-outline-light" id="blueberry" onclick="displayBlueberryInfo()"><img src="img/blueberry.png"  class="flavor" alt="Close-up of blueberry ice cream."></button>
+        <button type="button" class="btn btn-outline-light"id="pb" onclick="displayPbInfo()"><img src="img/pb.png"  class="flavor" alt="Close-up of peanut butter ice cream."></button>
       </div>
         <div id="vanillainfo"><h1>VANILLA</h1>
 Cupcake ipsum dolor sit amet caramels donut brownie macaroon. Cotton candy brownie wafer sesame snaps apple pie macaroon I love. Gummies marshmallow sugar plum. I love halvah ice cream I love chocolate cake pie. Dessert dragée marshmallow jelly beans. Lollipop tootsie roll macaroon. I love macaroon gingerbread tart I love. Cake pie danish chocolate ice cream pudding jelly-o biscuit.</div>
@@ -46,8 +46,8 @@ Cupcake ipsum dolor sit amet caramels donut brownie macaroon. Cotton candy brown
         <div id="raspberryinfo"><h1>BLACK RASPBERRY</h1>
 Cupcake ipsum dolor sit amet caramels donut brownie macaroon. Cotton candy brownie wafer sesame snaps apple pie macaroon I love. Gummies marshmallow sugar plum. I love halvah ice cream I love chocolate cake pie. Dessert dragée marshmallow jelly beans. Lollipop tootsie roll macaroon. I love macaroon gingerbread tart I love. Cake pie danish chocolate ice cream pudding jelly-o biscuit.</div>
         <div id="pumpkininfo"><h1>PUMPKIN</h1>
-Cupcake ipsum dolor sit amet caramels donut brownie macaroon. Cotton candy brownie wafer sesame snaps apple pie macaroon I love. Gummies marshmallow sugar plum. I love halvah ice cream I love chocolate cake pie. Dessert dragée marshmallow jelly beans. Lollipop tootsie roll macaroon. I love macaroon gingerbread tart I love. Cake pie danish chocolate ice cream pudding jelly-o biscuit.</p>
-        <div id="coffeeinfo"><h1>COFFEE</div>
+Cupcake ipsum dolor sit amet caramels donut brownie macaroon. Cotton candy brownie wafer sesame snaps apple pie macaroon I love. Gummies marshmallow sugar plum. I love halvah ice cream I love chocolate cake pie. Dessert dragée marshmallow jelly beans. Lollipop tootsie roll macaroon. I love macaroon gingerbread tart I love. Cake pie danish chocolate ice cream pudding jelly-o biscuit.</div>
+        <div id="coffeeinfo"><h1>COFFEE</h1>
 Cupcake ipsum dolor sit amet caramels donut brownie macaroon. Cotton candy brownie wafer sesame snaps apple pie macaroon I love. Gummies marshmallow sugar plum. I love halvah ice cream I love chocolate cake pie. Dessert dragée marshmallow jelly beans. Lollipop tootsie roll macaroon. I love macaroon gingerbread tart I love. Cake pie danish chocolate ice cream pudding jelly-o biscuit.</div>
         <div id="mintinfo"><h1>MINT CHOCOLATE CHIP</h1>
 Cupcake ipsum dolor sit amet caramels donut brownie macaroon. Cotton candy brownie wafer sesame snaps apple pie macaroon I love. Gummies marshmallow sugar plum. I love halvah ice cream I love chocolate cake pie. Dessert dragée marshmallow jelly beans. Lollipop tootsie roll macaroon. I love macaroon gingerbread tart I love. Cake pie danish chocolate ice cream pudding jelly-o biscuit.</div>
