--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
         <meta name="theme-color" content="#81e4da">
   </head>
   <body>
+    <div id="wrapper">
     <header>
       <a href="index.html"><img src="img/conename.png" id="icon" alt="Bordenkircher Ice Creams Logo"></a>
       <nav>
@@ -29,7 +30,15 @@
       </nav>
     </header>
         <img src="img/banner.png" id="banner" alt="">
-
+        <div id="content">
+          <div class="row">
+        <div class="col"><h2>Locations</h2><p>Caramels chocolate cake jujubes candy toffee candy canes cake lollipop. Donut gingerbread bonbon cotton candy cake bear claw cake muffin candy. Bear claw sweet tiramisu.</p></div>
+        <div class="col"><h2>Social Media</h2><p>Caramels chocolate cake jujubes candy toffee candy canes cake lollipop. Donut gingerbread bonbon cotton candy cake bear claw cake muffin candy. Bear claw sweet tiramisu.</p></div>
+        <div class="col col-sm-12"><h2>A Look Insde</h2><img src="img/inside.jpg" alt="Inside the store" id="inside"></div>
+      </div>
+    </div>
+    </div>
+        <footer>&copy; 2017 M. S. Bordenkircher Designs</footer>
   </body>
-  <footer>&copy; 2017 M. S. Bordenkircher Designs</footer>
+
 </html>
