fix centering issue at small resolutions, more flavoring

--- a/index.html
+++ b/index.html
@@ -30,11 +30,12 @@
       </nav>
     </header>
         <img src="img/banner.png" id="banner" alt="">
+        <img src="img/bannerlg.png" id="bannerlg" alt="">
         <div id="content">
           <div class="row">
-        <div class="col"><h2>Locations</h2><p>Caramels chocolate cake jujubes candy toffee candy canes cake lollipop. Donut gingerbread bonbon cotton candy cake bear claw cake muffin candy. Bear claw sweet tiramisu.</p></div>
-        <div class="col"><h2>Social Media</h2><p>Caramels chocolate cake jujubes candy toffee candy canes cake lollipop. Donut gingerbread bonbon cotton candy cake bear claw cake muffin candy. Bear claw sweet tiramisu.</p></div>
-        <div class="col col-sm-12"><h2>A Look Insde</h2><img src="img/inside.jpg" alt="Inside the store" id="inside"></div>
+        <div class="col-sm-12 col-md-6"><h2>Locations</h2><p>Caramels chocolate cake jujubes candy toffee candy canes cake lollipop. Donut gingerbread bonbon cotton candy cake bear claw cake muffin candy. Bear claw sweet tiramisu.</p></div>
+        <div class="col-sm-12 col-md-6"><h2>Social Media</h2><p>Caramels chocolate cake jujubes candy toffee candy canes cake lollipop. Donut gingerbread bonbon cotton candy cake bear claw cake muffin candy. Bear claw sweet tiramisu.</p></div>
+        <div class="col-sm-12 col-md-12"><h2>A Look Insde</h2><img src="img/inside.jpg" alt="Inside the store" id="inside"></div>
       </div>
     </div>
     </div>
