--- a/signup.html
+++ b/signup.html
@@ -28,6 +28,7 @@
       </nav>
     </header>
       <img src="img/banner.png" id="banner" alt="">
+      <img src="img/bannerlg.png" id="bannerlg" alt="">
       <div class="formbody">
   <form action:"index.html" method="post">
     <h1>Thank You for Signing Up!</h1>
