more design implementations, media queries updated

--- a/flavors.html
+++ b/flavors.html
@@ -29,6 +29,7 @@
     </header>
       <img src="img/banner.png" id="banner" alt>
       <img src="img/bannerlg.png" id="bannerlg" alt="">
+      <img src="img/bannerxl.png" id="bannerxl" alt="">
       <div id="flavorwrapper">
         <button type="button" class="btn btn-outline-light" id="vanilla" onclick="displayVanillaInfo()"><img src="img/vanilla.png" class="flavor" alt="Close-up of vanilla ice cream."></button>
         <button type="button" class="btn btn-outline-light" id="chocolate" onclick="displayChocolateInfo()"><img src="img/chocolate.png"  class="flavor" alt="Close-up of chocolate ice cream."></button>
