--- a/index.html
+++ b/index.html
@@ -31,11 +31,12 @@
     </header>
         <img src="img/banner.png" id="banner" alt="">
         <img src="img/bannerlg.png" id="bannerlg" alt="">
+        <img src="img/bannerxl.png" id="bannerxl" alt="">
         <div id="content">
-          <div class="row">
-        <div class="col-sm-12 col-md-6"><h2>Locations</h2><p>Caramels chocolate cake jujubes candy toffee candy canes cake lollipop. Donut gingerbread bonbon cotton candy cake bear claw cake muffin candy. Bear claw sweet tiramisu.</p></div>
-        <div class="col-sm-12 col-md-6"><h2>Social Media</h2><p>Caramels chocolate cake jujubes candy toffee candy canes cake lollipop. Donut gingerbread bonbon cotton candy cake bear claw cake muffin candy. Bear claw sweet tiramisu.</p></div>
-        <div class="col-sm-12 col-md-12"><h2>A Look Insde</h2><img src="img/inside.jpg" alt="Inside the store" id="inside"></div>
+          <div class="row m-0">
+        <div class="col-sm-12 col-md-6 p-0 px-md-2"><h2>Locations</h2><p>Caramels chocolate cake jujubes candy toffee candy canes cake lollipop. Donut gingerbread bonbon cotton candy cake bear claw cake muffin candy. Bear claw sweet tiramisu.</p></div>
+        <div class="col-sm-12 col-md-6 p-0 px-md-2"><h2>Social Media</h2><p><a href="#">Twitter</a></br></br><a href="#">Facebook</a></br></br><a href="#">Our Icecream Subreddit</a></div>
+        <div class="col-sm-12 col-md-12 p-0 px-md-2"><h2>A Look Insde</h2><img src="img/inside.jpg" alt="Inside the store" id="inside"></div>
       </div>
     </div>
     </div>
