--- a/signup.html
+++ b/signup.html
@@ -29,6 +29,7 @@
     </header>
       <img src="img/banner.png" id="banner" alt="">
       <img src="img/bannerlg.png" id="bannerlg" alt="">
+      <img src="img/bannerxl.png" id="bannerxl" alt="">
       <div class="formbody">
   <form action:"index.html" method="post">
     <h1>Thank You for Signing Up!</h1>
@@ -43,18 +44,15 @@
             <select id="flavorselect" name="user_flavorselect">
                 <option value="chocolate">Chocolate</option>
                 <option value="vanilla">Vanilla</option>
-                <option value="strawberry">Strawberry</option>
-                <option value="mocha_chip">Mocha Chip</option>
-                <option value="chocolate">Chocolate</option>
-                <option value="vanilla">Vanilla</option>
-                <option value="strawberry">Strawberry</option>
-                <option value="mocha_chip">Mocha Chip</option>
-                <option value="chocolate">Chocolate</option>
-                <option value="vanilla">Vanilla</option>
-                <option value="strawberry">Strawberry</option>
-                <option value="mocha_chip">Mocha Chip</option>
+                <option value="strawberry">Mint Chocolate Chip</option>
+                <option value="mocha_chip">Coffee</option>
+                <option value="chocolate">Peanut Butter</option>
+                <option value="vanilla">Black Raspberry</option>
+                <option value="strawberry">Blueberry</option>
+                <option value="mocha_chip">Pumpkin</option>
+                <option value="chocolate">Chookies and Cream</option>
             </select>
-          <label for="birthday">BirthDay:</label><br><br>
+          <label for="birthday">Birthday:</label><br><br>
               <input type="date" id="birthday" name="user_birthday">
           <input type="submit" value="Yay, Birthday Ice Cream!" id="submit">
   </form>
