Slight design change, fixed issues without JavaScript enabled, and cleaned up root folder.

--- a/flavors.html
+++ b/flavors.html
@@ -9,12 +9,12 @@
         <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.3/umd/popper.min.js" integrity="sha384-vFJXuSJphROIrBnz7yo7oB41mKfc8JzQZiCq4NCceLEaO4IHwicKwpJf9c9IpFgh" crossorigin="anonymous"></script>
         <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.2/js/bootstrap.min.js" integrity="sha384-alpBpkh1PFOepccYVYDB4do5UnbKysX5WZXm3XxPqe5iKTfUKjNkCk9SaVuEZflJ" crossorigin="anonymous"></script>
         <link rel="stylesheet" href="css/main.css">
-        <link rel="shortcut icon" type="image/x-icon" href="favicon.ico"/>
-        <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
-        <link rel="icon" type="image/png" sizes="32x32" href="favicon-32x32.png">
-        <link rel="icon" type="image/png" sizes="16x16" href="favicon-16x16.png">
-        <link rel="manifest" href="/manifest.json">
-        <link rel="mask-icon" href="/safari-pinned-tab.svg" color="#ffa5ca">
+        <link rel="shortcut icon" type="image/x-icon" href="img/favicon.ico"/>
+        <link rel="apple-touch-icon" sizes="180x180" href="img/apple-touch-icon.png">
+        <link rel="icon" type="image/png" sizes="32x32" href="img/favicon-32x32.png">
+        <link rel="icon" type="image/png" sizes="16x16" href="img/favicon-16x16.png">
+        <link rel="manifest" href="img/manifest.json">
+        <link rel="mask-icon" href="img/safari-pinned-tab.svg" color="#ffa5ca">
         <meta name="theme-color" content="#81e4da">
   </head>
   <body class="wrapper">
@@ -31,16 +31,6 @@
       <img src="img/bannerlg.png" id="bannerlg" alt="">
       <img src="img/bannerxl.png" id="bannerxl" alt="">
       <div id="flavorwrapper">
-        <button type="button" class="btn btn-outline-light" id="vanilla" onclick="displayVanillaInfo()"><img src="img/vanilla.png" class="flavor" alt="Close-up of vanilla ice cream."></button>
-        <button type="button" class="btn btn-outline-light" id="chocolate" onclick="displayChocolateInfo()"><img src="img/chocolate.png"  class="flavor" alt="Close-up of chocolate ice cream."></button>
-        <button type="button" class="btn btn-outline-light" id="pumpkin" onclick="displayPumpkinInfo()"><img src="img/pumpkin.png"  class="flavor" alt="Close-up of pumpkin ice cream."></button>
-        <button type="button" class="btn btn-outline-light" id="coffee" onclick="displayCoffeeInfo()"><img src="img/coffee.png"  class="flavor" alt="Close-up of coffee ice cream."></button>
-        <button type="button" class="btn btn-outline-light" id="mint" onclick="displayMintInfo()"><img src="img/mintchoccychip.png"  class="flavor" alt="Close-up of mint chocolate chip ice cream."></button>
-        <button type="button" class="btn btn-outline-light" id="raspberry" onclick="displayRaspberryInfo()"><img src="img/blackraspberry.png"  class="flavor" alt="Close-up of black raspberry ice cream."></button>
-        <button type="button" class="btn btn-outline-light" id="cncream" onclick="displayCncreamInfo()"><img src="img/cookiesandcream.png" class="flavor" alt="Close-up of cookies and cream ice cream."></button>
-        <button type="button" class="btn btn-outline-light" id="blueberry" onclick="displayBlueberryInfo()"><img src="img/blueberry.png"  class="flavor" alt="Close-up of blueberry ice cream."></button>
-        <button type="button" class="btn btn-outline-light"id="pb" onclick="displayPbInfo()"><img src="img/pb.png"  class="flavor" alt="Close-up of peanut butter ice cream."></button>
-      </div>
         <div id="vanillainfo"><h1>VANILLA</h1>
 Cupcake ipsum dolor sit amet caramels donut brownie macaroon. Cotton candy brownie wafer sesame snaps apple pie macaroon I love. Gummies marshmallow sugar plum. I love halvah ice cream I love chocolate cake pie. Dessert dragée marshmallow jelly beans. Lollipop tootsie roll macaroon. I love macaroon gingerbread tart I love. Cake pie danish chocolate ice cream pudding jelly-o biscuit.</div>
         <div id="chocolateinfo"><h1>CHOCOLATE</h1>
@@ -59,6 +49,19 @@ Cupcake ipsum dolor sit amet bonbon icing lemon drops tiramisu I love apple pie.
 Cupcake ipsum dolor sit amet cake carrot cake cupcake gingerbread toffee apple pie icing. Jelly beans I love chocolate tootsie roll gummi bears. I love croissant cupcake carrot cake tootsie roll apple pie sweet. Bonbon dragée gummi bears. Topping candy liquorice I love I love I love. I love apple pie cookie apple pie cheesecake candy canes cheesecake bear claw chocolate cake. Toffee tiramisu chocolate. I love biscuit gummi bears cake toffee marzipan. Donut dessert I love powder sweet caramels cheesecake.</div>
         <div id="pbinfo"><h1>PEANUT BUTTER</h1>
 Cupcake ipsum dolor sit amet cake croissant dessert cheesecake. Pastry fruitcake topping dessert tiramisu I love. Chocolate cake cake gummies topping lemon drops apple pie I love. Chocolate cheesecake chocolate cake liquorice icing. Gingerbread apple pie croissant pudding. I love biscuit caramels. Cotton candy I love marzipan jelly-o I love. Muffin ice cream I love I love toffee candy candy canes gummi bears cookie. Gummi bears I love chocolate. Oat cake chocolate cake biscuit I love.</div>
+      <div id="buttonBlock">
+        <button type="button" class="btn btn-outline-info" id="vanilla" onclick="displayVanillaInfo()"><img src="img/vanilla.png" class="flavor" alt="Close-up of vanilla ice cream."></button>
+        <button type="button" class="btn btn-outline-info" id="chocolate" onclick="displayChocolateInfo()"><img src="img/chocolate.png"  class="flavor" alt="Close-up of chocolate ice cream."></button>
+        <button type="button" class="btn btn-outline-info" id="pumpkin" onclick="displayPumpkinInfo()"><img src="img/pumpkin.png"  class="flavor" alt="Close-up of pumpkin ice cream."></button>
+        <button type="button" class="btn btn-outline-info" id="coffee" onclick="displayCoffeeInfo()"><img src="img/coffee.png"  class="flavor" alt="Close-up of coffee ice cream."></button>
+        <button type="button" class="btn btn-outline-info" id="mint" onclick="displayMintInfo()"><img src="img/mintchoccychip.png"  class="flavor" alt="Close-up of mint chocolate chip ice cream."></button>
+        <button type="button" class="btn btn-outline-info" id="raspberry" onclick="displayRaspberryInfo()"><img src="img/blackraspberry.png"  class="flavor" alt="Close-up of black raspberry ice cream."></button>
+        <button type="button" class="btn btn-outline-info" id="cncream" onclick="displayCncreamInfo()"><img src="img/cookiesandcream.png" class="flavor" alt="Close-up of cookies and cream ice cream."></button>
+        <button type="button" class="btn btn-outline-info" id="blueberry" onclick="displayBlueberryInfo()"><img src="img/blueberry.png"  class="flavor" alt="Close-up of blueberry ice cream."></button>
+        <button type="button" class="btn btn-outline-info"id="pb" onclick="displayPbInfo()"><img src="img/pb.png"  class="flavor" alt="Close-up of peanut butter ice cream."></button>
+      </div>
+    </div>
+
   <script type="text/javascript" src="js/action.js"></script>
     </body>
     <footer>&copy; 2017 M. S. Bordenkircher Designs</footer>
